# Archiver-Wsuite

./: .gitignore  AUTOMATION.md  CLAUDE.md  CONVERSION_PLAN.md  DESIGN.md  PROJECT_MAP.md  README.md  REFACTOR_PLAN_bans_and_paths.md  USER-GUIDE.md  WINDOWS_PORT.md  requirements.txt
.github/workflows/: selftest.yml
archiver/: README.md  pyproject.toml
archiver/archiver/: __init__.py  __main__.py  _selftest_ban_quarantine.py  _selftest_routes_dir.py  cli.py  config.py  cookies.py  lock_reader.py  loop_state.py  orchestrator.py  platforms.py  reconcile.py
core/: pyproject.toml
core/core/: __init__.py  _selftest.py  _selftest_account_gone.py  _selftest_drain_eta.py  _selftest_fixes.py  _selftest_manual_delete.py  _selftest_media_prep.py  _selftest_quarantine.py  _selftest_register_media.py  _selftest_safebrake.py  _selftest_termui.py  account_gone.py  backfill.py  cli.py  dedup.py  deletion.py  env.py  ffmpeg.py  ffprobe.py  files.py  grouping.py  hashing.py  heartbeat.py  identity.py  ingest.py  instance_lock.py  manual_delete.py  media_prep.py  migrate.py  models.py  orphaned.py  paths.py  policies.py  policy_store.py  quarantine.py  recorder_lock.py  routing.py  sanitize.py  schema.py  sorter.py  (+4 more)
core/core/platform/: __init__.py  filelock.py  paths.py  process.py  procgroup.py  service.py  signals.py
dispatcher/: .env.example  README.md  pyproject.toml
dispatcher/dispatcher/: __init__.py  __main__.py  _selftest_client_for.py  _selftest_config.py  _selftest_fast_upload.py  _selftest_keepalive.py  cli.py  config.py  delete.py  drain.py  fast_upload.py  image_fix.py  instance_lock.py  keepalive.py  media_meta.py  progress.py  send.py  tg_router.py
ops/: RUNBOOK.md  log_setup.py  pyproject.toml
ops/launchd/: com.duy.archiver.plist  com.duy.dispatcher.plist  com.duy.recorder.plist
ops/ops/: __init__.py  __main__.py  _selftest_logrotate.py  _selftest_update.py  cli.py  health.py  logrotate.py  update.py
recorder/: README.md  pyproject.toml
recorder/recorder/: __init__.py  __main__.py  _selftest_ban_escalation.py  _selftest_capture.py  _selftest_reconnect.py  _selftest_skip_safetynet.py  _selftest_ui.py  _selftest_watch.py  ban_check.py  capture.py  cli.py  config.py  enqueue.py  lock.py  startup_sweep.py  state.py  ui.py  unstartable.py  watch.py
tests/: test_seams.py
tools/: _selftest_migrate_split_roots.py  dedup_existing.py  migrate_config_to_archive.py  migrate_paths_to_archive.py  migrate_paths_to_windows.py  migrate_split_roots.py  recover_suite_db.py
