[project]
name = "media-archiver"
version = "1.1.0"
description = "Multi-platform media archiver: download X/TikTok/Instagram media into a shared queue for the dispatcher."
requires-python = ">=3.13"
dependencies = [
    # Platform extractors
    "yt-dlp[default]>=2024.11.18",   # TikTok videos; [default] pulls curl_cffi for TLS impersonation
    "gallery-dl>=1.27.0",            # X media + TikTok photo carousels
    # Config / env
    "python-dotenv>=1.0.0",
    "curl-cffi>=0.10,<0.15",
]

[project.scripts]
archiver = "archiver.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["archiver"]
