[project]
name = "dispatcher"
version = "0.1.0"
description = "Telegram upload dispatcher: drains a shared SQLite queue and sends to Telegram. One owner of the Telegram session, many producers."
requires-python = ">=3.13"
dependencies = [
    # Telegram MTProto (NOT Bot API — 2GB upload limit, native albums)
    "telethon>=1.36.0,<2.0",
    # Native AES-NI for MTProto. Without it Telethon falls back to pure-Python
    # AES, which CPU-bottlenecks every up/download to a few hundred KB/s. This
    # is the single biggest upload-speed lever; pair it with the parallel
    # uploader (fast_upload.py) for app-grade throughput on big files.
    "cryptg>=0.4",
    # Telethon's video-metadata backend. REQUIRED, not optional: the native
    # video-ALBUM send (send.py) passes no explicit attributes and relies on
    # Telethon to derive each item's width/height/duration itself — and Telethon
    # can only do that with hachoir installed. Without it, Telethon emits a
    # degenerate DocumentAttributeVideo(w=1, h=1, duration=0) and Telegram
    # renders every album video as a 1x1 static IMAGE. (Single sends are immune:
    # they attach explicit ffprobe attributes — see _video_attributes.)
    "hachoir>=3.1",
    # Config / env
    "python-dotenv>=1.0.0",
    # TOML writer for PolicyStore (tomllib is stdlib for reading)
    "tomli-w>=1.0.0",
]

[project.scripts]
dispatcher = "dispatcher.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dispatcher"]
