[project]
name = "recorder"
version = "0.1.0"
description = "TikTok live recorder. Monitors a priority list, records one stream at a time via yt-dlp, registers finished files in the shared suite DB (via core)."
requires-python = ">=3.13"
dependencies = [
    "TikTokLive==6.6.5",
    "betterproto==2.0.0b7",
    "yt-dlp>=2026.1.1",
    "python-dotenv>=1.0.0",
    "tomli-w>=1.0.0",
    # Headless-browser fallback for age-restricted lives whose pull URL the
    # webcast API refuses to an unsigned request (recorder.platforms.
    # tiktok_browser). Needs a one-time `python -m playwright install chromium`.
    "playwright>=1.50",
]

[project.scripts]
recorder = "recorder.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["recorder", "recorder.platforms"]
